--- a/css/styles.css
+++ b/css/styles.css
@@ -182,6 +182,11 @@ button:focus,
 	margin: auto 20px auto 20px;
 }
 
+.social-media__item {
+	text-decoration: none;
+	margin: 10px;
+}
+
 .experience {
 	margin: 0 auto;
 	border-collapse: collapse;
