--- a/css/styles.production.css
+++ b/css/styles.production.css
@@ -3,9 +3,9 @@
 }
 
 body {
-	background-color: #add8e6;
-	color: #2b2b2b;
-	font-family: "Roboto", sans-serif;
+	background-color: undefined;
+	color: undefined;
+	font-family: undefined;
 	line-height: 1.6;
 	margin: 0 auto;
 }
@@ -38,14 +38,14 @@ section {
 }
 
 .text-input {
-	font-family: 'Courier New', Courier, monospace;
+	font-family: undefined;
 	font-size: 1.5em;
 	font-weight: bold;
 	padding: 10px 20px;
-	border: 3px solid #42c470;
+	border: undefined;
 	border-radius: 5px;
-	caret-color: #58007e;
-	color: #58007e;
+	caret-color: undefined;
+	color: undefined;
 }
 
 input[type="submit"] {
@@ -66,10 +66,10 @@ textarea {
 }
 
 button {
-	font-family: 'Courier New', Courier, monospace;
+	font-family: undefined;
 	font-size: 1.25em;
 	font-weight: bold;
-	color: #ffffff;
+	color: undefined;
 	border: none;
 	display: inline-block;
 	text-decoration: none;
@@ -77,19 +77,15 @@ button {
 	margin-top: 10px;
 	margin-bottom: 10px;
 	border-radius: 10px;
-	-webkit-transition-duration: 0.4s;
-	-o-transition-duration: 0.4s;
 	transition-duration: 0.4s;
-	-webkit-transition-property: background-color;
-	-o-transition-property: background-color;
 	transition-property: background-color;
 }
 
 .button__primary {
-	font-family: 'Courier New', Courier, monospace;
+	font-family: undefined;
 	font-size: 1.25em;
 	font-weight: bold;
-	color: #ffffff;
+	color: undefined;
 	border: none;
 	display: inline-block;
 	text-decoration: none;
@@ -97,19 +93,15 @@ button {
 	margin-top: 10px;
 	margin-bottom: 10px;
 	border-radius: 10px;
-	-webkit-transition-duration: 0.4s;
-	-o-transition-duration: 0.4s;
 	transition-duration: 0.4s;
-	-webkit-transition-property: background-color;
-	-o-transition-property: background-color;
 	transition-property: background-color;
 }
 
 .button__secondary {
-	font-family: 'Courier New', Courier, monospace;
+	font-family: undefined;
 	font-size: 1.25em;
 	font-weight: bold;
-	color: #ffffff;
+	color: undefined;
 	border: none;
 	display: inline-block;
 	text-decoration: none;
@@ -117,49 +109,45 @@ button {
 	margin-top: 10px;
 	margin-bottom: 10px;
 	border-radius: 10px;
-	-webkit-transition-duration: 0.4s;
-	-o-transition-duration: 0.4s;
 	transition-duration: 0.4s;
-	-webkit-transition-property: background-color;
-	-o-transition-property: background-color;
 	transition-property: background-color;
 }
 
 .button__primary {
-	background-color: #58007e;
+	background-color: undefined;
 }
 
 .button__secondary {
-	background-color: #0568ca;
+	background-color: undefined;
 }
 
 button:hover {
-	background-color: #42c470;
+	background-color: undefined;
 	cursor: pointer;
 }
 
 button:focus {
-	background-color: #42c470;
+	background-color: undefined;
 	cursor: pointer;
 }
 
 .button__primary:hover {
-	background-color: #42c470;
+	background-color: undefined;
 	cursor: pointer;
 }
 
 .button__primary:focus {
-	background-color: #42c470;
+	background-color: undefined;
 	cursor: pointer;
 }
 
 .button__secondary:hover {
-	background-color: #42c470;
+	background-color: undefined;
 	cursor: pointer;
 }
 
 .button__secondary:focus {
-	background-color: #42c470;
+	background-color: undefined;
 	cursor: pointer;
 }
 
@@ -169,8 +157,8 @@ button:focus {
 }
 
 .default__link {
-	color: #58007e;
-	font-family: 'Courier New', Courier, monospace;
+	color: undefined;
+	font-family: undefined;
 	font-size: 1em;
 	font-weight: bold;
 	margin: 10px;
@@ -182,11 +170,11 @@ button:focus {
 }
 
 .default__link:visited {
-	color: #58007e;
+	color: undefined;
 }
 
 .default__link:active {
-	color: #58007e;
+	color: undefined;
 }
 
 .navigation-list__item--active {
@@ -198,27 +186,25 @@ button:focus {
 	width: 250px;
 	margin-right: 40px;
 	border-radius: 50%;
-	border: 10px solid #42c470;
+	border: undefined;
 }
 
 .interests {
 	list-style: none;
 	padding: 0;
-	display: -webkit-box;
-	display: -ms-flexbox;
 	display: flex;
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
-	-ms-flex-direction: column;
 	flex-direction: column;
-	-webkit-box-pack: center;
-	-ms-flex-pack: center;
 	justify-content: center;
 	margin: 0 auto;
 }
 
 .interests__item {
 	margin: auto 20px auto 20px;
+}
+
+.social-media__item {
+	text-decoration: none;
+	margin: 10px;
 }
 
 .experience {
@@ -228,8 +214,8 @@ button:focus {
 }
 
 .experience th {
-	color: #ffffff;
-	background-color: #58007e;
+	color: undefined;
+	background-color: undefined;
 }
 
 .experience th:nth-child(1) {
@@ -241,11 +227,11 @@ button:focus {
 }
 
 .experience tr:nth-child(even) {
-	background-color: #94c2ef;
+	background-color: undefined;
 }
 
 .experience tr:hover {
-	background-color: #42c470;
+	background-color: undefined;
 }
 
 .credit-line {
@@ -257,57 +243,46 @@ button:focus {
 }
 
 .heading__index {
-	font-family: 'Courier New', Courier, monospace;
+	font-family: undefined;
 	font-weight: bold;
 	font-size: 3em;
-	color: #42c470;
+	color: undefined;
 }
 
 #hello_world {
-	background-color: #2b2b2b;
+	background-color: undefined;
 	padding: 1%;
 	border-radius: 10px;
 	white-space: nowrap;
 }
 
 #code_text {
-	font-family: 'Courier New', Courier, monospace;
+	font-family: undefined;
 	font-weight: bold;
-	background-color: #2b2b2b;
-	color: #42c470;
+	background-color: undefined;
+	color: undefined;
 	border-radius: 10px;
 	padding: 0.5%;
 }
 
 .page-footer {
 	clear: both;
-	display: -webkit-box;
-	display: -ms-flexbox;
 	display: flex;
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
-	-ms-flex-direction: column;
 	flex-direction: column;
 	text-align: center;
 }
 
 .page-header {
-	display: -webkit-box;
-	display: -ms-flexbox;
 	display: flex;
 	width: 100%;
 	padding: 20px;
 }
 
 .page-header__item {
-	-webkit-box-flex: 0;
-	-ms-flex: 0 1 200px;
 	flex: 0 1 200px;
 }
 
 .page-header__item:last-child {
-	-webkit-box-flex: 1;
-	-ms-flex-positive: 1;
 	flex-grow: 1;
 	text-align: right;
 }
@@ -318,16 +293,14 @@ button:focus {
 
 @supports (display: grid) {
 	.project-list {
-		display: -ms-grid;
 		display: grid;
-		-ms-grid-columns: 1fr 20px 1fr 20px 1fr;
 		grid-template-columns: 1fr 1fr 1fr;
 		grid-gap: 20px;
 		margin: 0;
 	}
 
 	.project-list__item {
-		background-color: #94c2ef;
+		background-color: undefined;
 		width: auto;
 		min-height: auto;
 		margin: 0;
@@ -335,53 +308,37 @@ button:focus {
 }
 
 .project-list {
-	display: -ms-grid;
 	display: grid;
-	-ms-grid-columns: 1fr 20px 1fr 20px 1fr;
 	grid-template-columns: 1fr 1fr 1fr;
 	grid-gap: 20px;
 }
 
 .project-list__item {
-	border: 5px solid #42c470;
+	border: undefined;
 	border-radius: 10px;
-	display: -webkit-box;
-	display: -ms-flexbox;
 	display: flex;
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
-	-ms-flex-direction: column;
 	flex-direction: column;
-	-webkit-box-flex: 0;
-	-ms-flex-positive: 0;
 	flex-grow: 0;
-	-ms-flex-negative: 0;
 	flex-shrink: 0;
-	-ms-flex-preferred-size: 100%;
 	flex-basis: 100%;
-	background-color: #94c2ef;
+	background-color: undefined;
 }
 
 .project-list__item__title {
 	margin: 0;
-	color: #ffffff;
-	background-color: #58007e;
+	color: undefined;
+	background-color: undefined;
 	border-radius: 5px 5px 0 0;
 }
 
 #contact-form {
-	display: -webkit-box;
-	display: -ms-flexbox;
 	display: flex;
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
-	-ms-flex-direction: column;
 	flex-direction: column;
 	margin: 5vh auto;
 }
 
 .text-input {
-	background-color: #94c2ef;
+	background-color: undefined;
 	margin-bottom: 2vh;
 }
 
@@ -399,7 +356,6 @@ button:focus {
 @media all and (max-width: 500px) {
 	.project-list {
 		margin: 0 20px;
-		-ms-grid-columns: 1fr;
 		grid-template-columns: 1fr;
 	}
 }
@@ -407,7 +363,6 @@ button:focus {
 @media all and (min-width: 500px) and (max-width: 750px) {
 	.project-list {
 		margin: 0 10px;
-		-ms-grid-columns: 1fr 20px 1fr;
 		grid-template-columns: 1fr 1fr;
 	}
 }
@@ -429,16 +384,6 @@ button:focus {
 
 }
 
-@-webkit-keyframes flicker {
-	from {
-		visibility: initial;
-	}
-
-	to {
-		visibility: hidden;
-	}
-}
-
 @keyframes flicker {
 	from {
 		visibility: initial;
@@ -449,237 +394,118 @@ button:focus {
 	}
 }
 
-@-webkit-keyframes path22 {
-	from {
-		-webkit-transform: translate(430%, 0);
-		transform: translate(430%, 0);
-	}
-
-	to {
-		-webkit-transform: translate(-500%, 0);
-		transform: translate(-500%, 0);
-	}
-}
-
 @keyframes path22 {
 	from {
-		-webkit-transform: translate(430%, 0);
 		transform: translate(430%, 0);
 	}
 
 	to {
-		-webkit-transform: translate(-500%, 0);
 		transform: translate(-500%, 0);
-	}
-}
-
-@-webkit-keyframes path24 {
-	from {
-		-webkit-transform: translate(190%, 0);
-		transform: translate(190%, 0);
-	}
-
-	to {
-		-webkit-transform: translate(-700%, 0);
-		transform: translate(-700%, 0);
 	}
 }
 
 @keyframes path24 {
 	from {
-		-webkit-transform: translate(190%, 0);
 		transform: translate(190%, 0);
 	}
 
 	to {
-		-webkit-transform: translate(-700%, 0);
 		transform: translate(-700%, 0);
-	}
-}
-
-@-webkit-keyframes path26 {
-	from {
-		-webkit-transform: translate(820%, 0);
-		transform: translate(820%, 0);
-	}
-
-	to {
-		-webkit-transform: translate(-50%, 0);
-		transform: translate(-50%, 0);
 	}
 }
 
 @keyframes path26 {
 	from {
-		-webkit-transform: translate(820%, 0);
 		transform: translate(820%, 0);
 	}
 
 	to {
-		-webkit-transform: translate(-50%, 0);
 		transform: translate(-50%, 0);
-	}
-}
-
-@-webkit-keyframes path28 {
-	from {
-		-webkit-transform: translate(625%, 0);
-		transform: translate(625%, 0);
-	}
-
-	to {
-		-webkit-transform: translate(-215%, 0);
-		transform: translate(-215%, 0);
 	}
 }
 
 @keyframes path28 {
 	from {
-		-webkit-transform: translate(625%, 0);
 		transform: translate(625%, 0);
 	}
 
 	to {
-		-webkit-transform: translate(-215%, 0);
 		transform: translate(-215%, 0);
-	}
-}
-
-@-webkit-keyframes path30 {
-	from {
-		-webkit-transform: translate(400%, 0);
-		transform: translate(400%, 0);
-	}
-
-	to {
-		-webkit-transform: translate(-440%, 0);
-		transform: translate(-440%, 0);
 	}
 }
 
 @keyframes path30 {
 	from {
-		-webkit-transform: translate(400%, 0);
 		transform: translate(400%, 0);
 	}
 
 	to {
-		-webkit-transform: translate(-440%, 0);
 		transform: translate(-440%, 0);
-	}
-}
-
-@-webkit-keyframes path32 {
-	from {
-		-webkit-transform: translate(40%, 0);
-		transform: translate(40%, 0);
-	}
-
-	to {
-		-webkit-transform: translate(-800%, 0);
-		transform: translate(-800%, 0);
 	}
 }
 
 @keyframes path32 {
 	from {
-		-webkit-transform: translate(40%, 0);
 		transform: translate(40%, 0);
 	}
 
 	to {
-		-webkit-transform: translate(-800%, 0);
 		transform: translate(-800%, 0);
 	}
 }
 
 #path22 {
-	-webkit-animation-duration: 65s;
 	animation-duration: 65s;
-	-webkit-animation-name: path22;
 	animation-name: path22;
-	-webkit-animation-iteration-count: infinite;
 	animation-iteration-count: infinite;
-	-webkit-animation-direction: normal;
 	animation-direction: normal;
-	-webkit-animation-timing-function: linear;
 	animation-timing-function: linear;
 }
 
 #path24 {
-	-webkit-animation-duration: 42s;
 	animation-duration: 42s;
-	-webkit-animation-name: path24;
 	animation-name: path24;
-	-webkit-animation-iteration-count: infinite;
 	animation-iteration-count: infinite;
-	-webkit-animation-direction: normal;
 	animation-direction: normal;
-	-webkit-animation-timing-function: linear;
 	animation-timing-function: linear;
 }
 
 #path26 {
-	-webkit-animation-duration: 33s;
 	animation-duration: 33s;
-	-webkit-animation-name: path26;
 	animation-name: path26;
-	-webkit-animation-iteration-count: infinite;
 	animation-iteration-count: infinite;
-	-webkit-animation-direction: normal;
 	animation-direction: normal;
-	-webkit-animation-timing-function: linear;
 	animation-timing-function: linear;
 }
 
 #path28 {
-	-webkit-animation-duration: 24s;
 	animation-duration: 24s;
-	-webkit-animation-name: path28;
 	animation-name: path28;
-	-webkit-animation-iteration-count: infinite;
 	animation-iteration-count: infinite;
-	-webkit-animation-direction: normal;
 	animation-direction: normal;
-	-webkit-animation-timing-function: linear;
 	animation-timing-function: linear;
 }
 
 #path30 {
-	-webkit-animation-duration: 19s;
 	animation-duration: 19s;
-	-webkit-animation-name: path30;
 	animation-name: path30;
-	-webkit-animation-iteration-count: infinite;
 	animation-iteration-count: infinite;
-	-webkit-animation-direction: normal;
 	animation-direction: normal;
-	-webkit-animation-timing-function: linear;
 	animation-timing-function: linear;
 }
 
 #path32 {
-	-webkit-animation-duration: 16s;
 	animation-duration: 16s;
-	-webkit-animation-name: path32;
 	animation-name: path32;
-	-webkit-animation-iteration-count: infinite;
 	animation-iteration-count: infinite;
-	-webkit-animation-direction: normal;
 	animation-direction: normal;
-	-webkit-animation-timing-function: linear;
 	animation-timing-function: linear;
 }
 
 #cli_prompt {
-	-webkit-animation-duration: 1s;
 	animation-duration: 1s;
-	-webkit-animation-name: flicker;
 	animation-name: flicker;
-	-webkit-animation-iteration-count: infinite;
 	animation-iteration-count: infinite;
-	-webkit-animation-direction: linear;
-	animation-direction: linear;
-	-webkit-animation-timing-function: steps(2, start);
+	animation-direction: normal;
 	animation-timing-function: steps(2, start);
 }
